fix: search results in order home overlapping button "show all"

--- a/src/FoodOrderSystem.App/ClientApp/src/app/order-home/order-home.component.css
+++ b/src/FoodOrderSystem.App/ClientApp/src/app/order-home/order-home.component.css
@@ -421,6 +421,8 @@
         font-size: 16px;
         padding: 0px;
         margin: 0px;
+        position: relative;
+        z-index: -1;
     }
 }
 
@@ -442,8 +444,8 @@
     font-family: "Apercu", sans-serif;
     position: absolute;
     margin-top: 42px;
-    max-height: 25vh;
-    overflow: auto;
+    max-height: 36vh;
+    overflow: hidden;
     z-index: -1;
 }
 
@@ -466,30 +468,57 @@
 }
 
 #order-home #start .results .restaurant-name {
-    color: #363636;
+    color: #94918E;
     font-family: "Apercu", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    margin-left: 32px;
-    margin-right: 32px;
+    font-size: 14px;
+    font-weight: 400;
+    padding-left: 54px;
+    line-height: 50px;
 }
 
-@media screen and (max-width: 768px) {
-    #order-home #start .results .restaurant-name {
-        margin-left: 16px;
-        margin-right: 16px;
-    }
+#order-home #start .results .border {
+    align-items: center;
+    border-bottom: 1px solid #E7E7E7;
+    display: flex;
+    justify-content: center;
+    margin-left: 54px;
+    margin-right: 54px;
+    width: calc(100% - 108px);
 }
+
 
 #order-home #start .results .order-type {
     float: right;
+    padding-right: 54px;
 }
 
 #order-home #start .results .order-type button {
-    color: #363636;
+    color: #333333;
     font-family: "Apercu", sans-serif;
-    font-size: 16px;
-    font-weight: 300;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 50px;
+}
+
+@media only screen and (max-width: 767px) {
+    #order-home #start .results {
+        max-height: 31vh;
+    }
+    #order-home #start .results .restaurant-name {
+        line-height: 40px;
+        padding-left: 16px;
+    }
+    #order-home #start .results .border {
+        margin-left: 16px;
+        margin-right: 16px;
+        width: calc(100% - 32px);
+    }
+    #order-home #start .results .order-type {
+        padding-right: 16px;
+    }
+    #order-home #start .results .order-type button {
+        line-height: 40px;
+    }
 }
 
 #order-home #start div.teller {
